fix: increase text selection contrast (#111)
fixes #44

--- a/packages/mandelbrot/assets/scss/core/_foundation.scss
+++ b/packages/mandelbrot/assets/scss/core/_foundation.scss
@@ -5,7 +5,7 @@
 }
 
 ::selection {
-    background-color: rgba($color-link, 0.075);
+    background-color: rgba($color-link, 0.2);
 }
 
 html {
